<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/logo_name"
            android:textColor="@color/black"

            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/constraint"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/email_adress"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/login_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/inputs"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/gray" />

            <TextView
                android:id="@+id/forget_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="23dp"
                android:text="@string/forget_password"
                android:textAlignment="textEnd"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_below="@id/forget_password_link"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttons"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_below="@id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttons"
                android:text="@string/registration"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phone_using"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_button"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="23dp"
                android:text="@string/or_log_in_using_your"
                android:textAlignment="center"
                android:textColor="@color/login_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/phone_login_button"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_below="@id/phone_using"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttons"
                android:text="@string/phone_log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>