<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.UserSettingsActivity">

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/user_settings_toolbar">

    </include>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/set_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/ic_profile"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/login_color"
        android:layout_below="@id/user_settings_toolbar"/>

    <EditText
        android:id="@+id/set_user_name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/set_profile_image"
        android:inputType="textMultiLine"
        android:hint="@string/username"
        android:textColorHint="@color/gray"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/inputs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/set_profile_status"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/set_user_name"
        android:inputType="textMultiLine"
        android:hint="@string/user_bio"
        android:textColorHint="@color/gray"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/inputs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/update_settings_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/set_profile_status"
        android:text="@string/save_info"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>


</RelativeLayout>